--- a/SwipeActions/Base.lproj/Main.storyboard
+++ b/SwipeActions/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                                 <rect key="frame" x="0.0" y="316" width="600" height="284"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="8WI-l9-KHJ" style="IBUITableViewCellStyleDefault" id="OsK-4w-zrT">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="8WI-l9-KHJ" style="IBUITableViewCellStyleDefault" id="OsK-4w-zrT">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OsK-4w-zrT" id="Yi4-b4-XTS">
                                             <autoresizingMask key="autoresizingMask"/>
